# bootmii-config-generator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: interaction.rs  main.rs  models.rs
