[package]
name = "bootmii_config_generator"
version = "0.1.3"
authors = ["frosty <inthishouseofcards@gmail.com>"]
edition = "2021"
description = "Tool to generate a BootMii configuration file for your Wii."
readme = "README.md"
repository = "https://github.com/st0rm1wndz/bootmii-config-generator"
license-file = "LICENSE"

[dependencies]
dialoguer = "0.11.0"
eyre = "0.6.12"
rust-ini = "0.20.0"
strum = "0.26.1"
strum_macros = "0.26.1"
